<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recuerdame.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.recuerdame.ui.dashboard.DashboardFragment"
        android:label="@string/title_recompensas"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_recordatorios"
        android:name="com.example.recuerdame.ui.notifications.NotificationsFragment"
        android:label="@string/title_recordatorios"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_rutina"
        android:name="com.example.recuerdame.ui.rutina.RutinaFragment"
        android:label="@string/title_rutina"
        tools:layout="@layout/fragment_rutina" />


    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.recuerdame.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>